test/conformance/chainsaw/ttl/permission-lack/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm
  labels:
    cleanup.kyverno.io/ttl: 10s
data:
  foo: bar
