test/conformance/chainsaw/ttl/permission-lack/resource-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm
  labels:
    cleanup.kyverno.io/ttl: 10s
