test/conformance/chainsaw/ttl/permission-lack/01-resource.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: resource
spec:
  try:
  - apply:
      file: resource.yaml
  - assert:
      file: resource-assert.yaml
