test/conformance/chainsaw/ttl/permission-lack/02-wait.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: wait
spec:
  timeouts: {}
  try:
  - command:
      args:
      - "15"
      entrypoint: sleep
