test/conformance/chainsaw/ttl/permission-lack/03-check.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: check
spec:
  try:
  - assert:
      file: resource-assert.yaml
