test/conformance/chainsaw/ttl/permission-lack/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: permission-lack
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-assert.yaml
  - name: step-02
    try:
    - sleep:
        duration: 15s
  - name: step-03
    try:
    - assert:
        file: resource-assert.yaml
